--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/index.html" />
+    <meta http-equiv="refresh" content="0; url=/film-service/index.html" />
   </head>
   <body>
   </body>
